--- a/index.html
+++ b/index.html
@@ -127,13 +127,13 @@
 								<article>
 									<header>
 										<span class="date">Org. Design: Succession Plan</span>
-										<h2><a href="#">Small-Town Turnaround: <br />
+										<h2><a href="https://drive.google.com/file/d/1zXNaCOX9En-XRqmZdcuwoD-c-1pET2Kf/view">Small-Town Turnaround: <br />
 											Cultivating Leaders in Crisis</a></h2>
 									</header>
 
 									<p>Elevated a small-town challenge by identifying and coaching emerging talent, implementing performance management, and resolving systemic issues. Pioneered a thriving succession plan, igniting sustainable growth.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="https://drive.google.com/file/d/1zXNaCOX9En-XRqmZdcuwoD-c-1pET2Kf/view" class="button">Full Story</a></li>
 									</ul>
 								</article>
 							</section>
