--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 		<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
-
+		<link rel="icon" href="path/to/your/favicon.ico" type="image/x-icon">
 
 	</head>
 	<body class="is-preload">
@@ -71,8 +71,8 @@
 								<article>
 									<header>
 										<span class="date">M&A - Diligence</span>
-										<h2><a href="https://drive.google.com/file/d/1rgDPznGzN-2fxD4WSHlq9a5X3fStuFMY/view">Hooters, Pet Snake, <br />
-										Gourmet Rat Feasts</a></h2>
+										<h2><a href="https://drive.google.com/file/d/1rgDPznGzN-2fxD4WSHlq9a5X3fStuFMY/view">RAce against the clock <br />
+										M&A</a></h2>
 									</header>
 									<p>Demonstrated M&A narrative in record time for sale to PE, blending financial acumen with on-the-ground insights—even the office pet snake didn't rattle the deal.</p>
 									<ul class="actions special">
@@ -104,7 +104,7 @@
 								<article>
 									<header>
 										<span class="date">Margin Enhancement</span>
-										<h2><a href="https://drive.google.com/file/d/12XzHJkBm5uIzIs6BwC5Y4R_LdPKwEuDW/view">Defying Putin's <br />
+										<h2><a href="https://drive.google.com/file/d/12XzHJkBm5uIzIs6BwC5Y4R_LdPKwEuDW/view">Defying <br />
 											Price Surge</a></h2>
 									</header>
 									<p>Cut costs, redefined sourcing, re-organized team and innovated operations to secure profitability despite the economic shockwaves from the Ukraine conflict.</p>
@@ -115,7 +115,7 @@
 								<article>
 									<header>
 										<span class="date">Business Operations Transformation</span>
-										<h2><a href="https://drive.google.com/file/d/19pC7a5BLku2xwbLERpP8QpUAsVDNow0i/view">Rescuing Brazil: <br />
+										<h2><a href="https://drive.google.com/file/d/19pC7a5BLku2xwbLERpP8QpUAsVDNow0i/view">Brazil: <br />
 											From Homicides to High Spirits</a></h2>
 									</header>
 			
